--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ span{
     color: rgb(111, 200, 225);
 }
 .name{
+    padding: 10px;
     margin: 2px 25px;
     border-radius: 7px;
     border: 2px solid rgb(111, 200, 225);
@@ -40,11 +41,13 @@ span{
     color: rgb(122, 117, 117);
 }
 .worth{
+    padding: 10px;
     margin: 2px 25px;
     border-radius: 7px;
     border: 2px solid #f9004d;
 }
 .total{
+    padding: 10px;
     margin: 2px 25px;
     border-radius: 7px;
     border: 2px solid #f9004d;
